src/styles.css
.cslp-edit-mode {
    outline: 1px dashed #6c5ce7 !important;
    position: relative !important;
}

button#cslp-tooltip {
    padding: 0;
    display: flex;
    outline: none;
    border: none;
    z-index: 200 !important;
    position: fixed;
    margin: 0;
    height: 35px;
    width: 72px;
    background: white;
    font-weight: 400 !important;
    color: #718096 !important;
    transition: background 0.2s;
    text-align: center !important;
    border-radius: 8px !important;
    font-size: 14px !important;
    justify-content: space-around;
    align-items: center;
    box-shadow: 0px 8px 20px 0px #2222221a;
    box-sizing: border-box;
    top: -100%;
}

button#cslp-tooltip div {
    display: flex;
    justify-content: space-around;
    border-radius: 6px !important;
    cursor: pointer;
}

button#cslp-tooltip div.cslp-tooltip-child:hover {
    background: #edf2f7;
}

button#cslp-tooltip div.cslp-tooltip-child:active:hover {
    background: #c7d0e1;
}

button#cslp-tooltip > div {
    display: flex;
    justify-content: space-evenly;
    white-space: nowrap;
    width: 70px;
}

button#cslp-tooltip .cslp-tooltip-child.singular {
    padding: 9px 1px;
}

div.multiple div.cslp-tooltip-child {
    padding: 9px;
}

div.multiple div.cslp-tooltip-child:before {
    opacity: 0;
    font-size: 12px;
    font-weight: 400;
    pointer-events: none;
    content: attr(data-title);
    color: white;
    padding: 5px 10px;
    border-radius: 4px;
    position: absolute;
    background: #4a5568;
    top: -30px;
    transition: 0.2s all ease-in-out;
}

div.multiple div.cslp-tooltip-child:hover:before {
    opacity: 1;
}

.cslp-edit-mode {
    cursor: none;
}
.visual-editor__cursor {
    visibility: hidden;
    height: 0;
}
.visual-editor__cursor.visible {
    visibility: visible;
    position: fixed;
    top: 0;
    left: 0;

    background: #715cdd;
    color: #fff;

    height: 24px;
    padding: 0 10px;

    display: flex;
    align-items: center;
    justify-content: center;

    pointer-events: none !important;
    position: fixed !important;
    cursor: none;
    z-index: 1000;
}
.visual-editor__container {
    font-family: "Inter", sans-serif;
}
.visual-editor__overlay__wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    visibility: hidden;
    z-index: 199;

    pointer-events: none;
}
.visual-editor__overlay--outline {
    position: absolute;
    outline: 4px solid #715cdd;
    transition: all 0.2s ease-in;
}
.visual-editor__overlay__wrapper.visible {
    visibility: visible;
}
.visual-editor__overlay {
    background: rgba(0, 0, 0, 0.3);
    box-sizing: content-box;
    pointer-events: all;
    position: absolute;
    transition: all 0.2s ease-in;
}
.visual-editor__replace-button {
    position: absolute;
    background: #715cdd;
    color: #fff;
    border: 1px solid transparent;
    pointer-events: all;
    border-radius: 4px;
}
.cslp-tooltip {
    visibility: hidden;
}
.visual-editor__add-button {
    position: absolute;
    pointer-events: all;

    background: #ffffff;
    color: #475161;

    border-radius: 4px;
    border: 1px solid #6c5ce7;

    height: 32px;
    width: 32px;
    transform: translate(-50%, -50%);

    display: flex;
    align-items: center;
    justify-content: center;

    z-index: 200;
}
.visual-editor__start-editing-btn {
    position: fixed;
    bottom: 30px;
    left: 50%;
    transform: translateX(-50%);

    display: inline-flex;
    padding: 0.5rem 1rem;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;

    border-radius: 4px;
    border: 1px solid transparent;
    background: #6c5ce7;
    transition: background-color 0.15s ease-in-out,
        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
        -webkit-box-shadow 0.15s ease-in-out;
}
.visual-editor__start-editing-btn:hover {
    background-color: #5d50be;
}
.visual-editor__start-editing-btn:focus {
    outline: none;
    box-shadow: 0 0 0 2px #ada4f4;
}
.visual-editor__start-editing-btn > span {
    color: #fff;
    /* Body/P1 Bold */
    font-size: 1rem;
    font-family: Inter;
    font-weight: 600;
    line-height: 150%;
    letter-spacing: 0.01rem;
    text-transform: capitalize;
}

